fix: [SRM-12289]: Wrap health source cards if enough space is not pre… (#11726)
* fix: [SRM-12289]: Wrap health source cards if enough space is not present

* fix: [SRM-12289]: Update snapshot

--- a/src/modules/85-cv/pages/health-source/HealthSourceDrawer/component/defineHealthSource/DefineHealthSource.module.scss
+++ b/src/modules/85-cv/pages/health-source/HealthSourceDrawer/component/defineHealthSource/DefineHealthSource.module.scss
@@ -70,3 +70,9 @@
   position: relative;
   overflow-y: scroll;
 }
+
+.healthSourceListContainer {
+  flex-wrap: wrap;
+  gap: var(--spacing-xxxlarge) var(--spacing-small);
+  margin: 0 var(--spacing-xxxlarge) var(--spacing-large) !important;
+}
